--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
+    <string name="measure">Measure :</string>
+    <string name="ingredient">Ingredient</string>
+    <string name="quantity">Quantity :</string>
+    <string name="title">TITLE</string>
+    <string name="description">Description</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="steps">Steps:</string>
+    <string name="internet_connection">Check Your Internet Connection</string>
 </resources>
