--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="ingredients">Ingredients</string>
     <string name="steps">Steps:</string>
     <string name="internet_connection">Check Your Internet Connection</string>
+    <string name="rv_tablet">rv_tablet</string>
 </resources>
